--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -1,1 +1,14 @@
+- name: Configure Web Server
+  hosts: all
+  become: yes
+  tasks:
+    - name: Install Nginx
+      yum:
+        name: nginx
+        state: present
+
+    - name: Start Nginx
+      service:
+        name: nginx
+        state: started
 
